Bug 91519 - Jump of document canvas view to the top of the comment disrupts editing of long comments
Summary: Jump of document canvas view to the top of the comment disrupts editing of lo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.3.0
Keywords:
: 106435 132122 (view as bug list)
Depends on:
Blocks: Writer-Comments Writer-View-Jumps
  Show dependency treegraph
 
Reported: 2015-05-23 11:53 UTC by Edmund Laugasson
Modified: 2025-02-22 09:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
document created during strace as regular user (22.49 KB, application/vnd.oasis.opendocument.text)
2015-05-23 12:02 UTC, Edmund Laugasson
Details
strace log in Linux (53.85 KB, text/plain)
2015-05-23 12:02 UTC, Edmund Laugasson
Details
backtrace log in Linux (3.51 KB, text/x-log)
2015-05-23 12:06 UTC, Edmund Laugasson
Details
document created during backtrace as root (22.34 KB, application/vnd.oasis.opendocument.text)
2015-05-23 12:07 UTC, Edmund Laugasson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edmund Laugasson 2015-05-23 11:53:51 UTC
Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)


Writing long comments will scroll automatically the comment first row to screen and writing place at the end remains unvisible from screen.

Same situation - activating comment window to improve already written comment firstly will mark bunch of text because it tries to scroll long comment first row to screen and therefore will automatically mark a lot of text. It means that if the long comment was scrolled to the end and then tries to edit that comment - it means to write something to the end of long comment then it will automatically scroll the first row at the same time when activating comment editing and therefore will mark all text because mouse left cursor is pressed down and this means also text marking due to automatic scrolling.

Here is one exception - when inserting long comment in case there is one comment before (upwards) then there will be scroll bar until there will be finished first editing session. But when once click outside the comment and then again back to improve it - then this error starts again - first row will be scrolled to the screen and downside of comment goes out of the screen and is not viewable and thus hard to edit. Workaround is to write comment in some external text editor and just copy to the appropriate place, usually in the end of long comment.
Comment 1 Edmund Laugasson 2015-05-23 12:02:14 UTC
Created attachment 115887 [details]
document created during strace as regular user

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)
Comment 2 Edmund Laugasson 2015-05-23 12:02:36 UTC
Created attachment 115888 [details]
strace log in Linux

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)
Comment 3 Edmund Laugasson 2015-05-23 12:06:32 UTC
Created attachment 115890 [details]
backtrace log in Linux

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)
Comment 4 Edmund Laugasson 2015-05-23 12:07:03 UTC
Created attachment 115891 [details]
document created during backtrace as root

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)
Comment 5 Edmund Laugasson 2015-05-23 12:08:44 UTC
This bug exist also in LibreOffice 4.4.3.2 on the same platform (64-bit Linux Mint 17.1)
Comment 6 Edmund Laugasson 2015-05-23 12:20:04 UTC
Such long comments are needed when commenting academic thesises as supervisor, adviser etc. Then should not edit the text but add comment connected with appropriate place in text. Also workaround could be to put checkpoints into text like [1] (used also with some referring styles) but then there would be question - why then use commenting at all if there is not possible to express myself as much as needed?

The good thing is, that at least compatibility with comments already exist with MS Word - thanks to programmers and also UK government - http://www.itproportal.com/2015/03/30/microsoft-will-adopt-open-document-standards-following-government-battle/

I tried to import .odt into OneDrive (https://onedrive.live.com/) and all comments (also long ones) were imported very well.

I really hope that LibreOffice Online will offer similar ability to import ODF documents with comments and also long ones.
Comment 7 Buovjaga 2015-05-25 14:07:14 UTC
(In reply to Edmund Laugasson from comment #1)
> Created attachment 115887 [details]
> document created during strace as regular user

Yeah, when clicking inside the lower comment after opening the file, it autoscrolls and selects the block of text that is between the click position and scroll finish.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: b9630867d17c01ec41f6461b1e96288f3932248c
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-25_00:45:41
Locale: fi-FI (fi_FI)
Comment 8 QA Administrators 2016-09-20 09:46:16 UTC Comment hidden (obsolete)
Comment 9 Edmund Laugasson 2016-09-20 10:47:57 UTC
Tested with LibreOffice 5.2.1, 64-bit on Linux Mint 18 (kernel 4.7.4).
Currently first row was not scrolled and text marked automatically in most times. It scrolls only when the comment box does not fit onto screen and then Writer focuses the comment box to screen.

Here would be the proposal to not try to fit the comment box to screen as there might be longer comment boxes and it would be quite disturbing when Writer tries to fit long comment box onto screen while it does not really fit as it is long box. If that could be also fixed then I guess current bug report could be counted as solved.
Comment 10 Buovjaga 2017-03-13 12:35:14 UTC
*** Bug 106435 has been marked as a duplicate of this bug. ***
Comment 11 QA Administrators 2018-03-27 02:28:39 UTC Comment hidden (obsolete)
Comment 12 Thomas Lendo 2018-04-03 14:04:12 UTC
Still reproducible in Version: 6.1.0.0.alpha0+ (x64)
Build ID: 8e0eb015e74775b9bf02326ffd7b67e83ad6c60d
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-04-03_03:53:38
Locale: de-AT (de_AT); Calc: CL
Comment 13 QA Administrators 2019-04-04 03:04:22 UTC Comment hidden (obsolete)
Comment 14 Thomas Lendo 2020-09-18 07:21:45 UTC
*** Bug 132122 has been marked as a duplicate of this bug. ***
Comment 15 Bayram Çiçek 2021-07-09 11:27:24 UTC
I've just send a patch about this bug.
You can review/test the patch and send me feedback. Thanks!

https://gerrit.libreoffice.org/c/core/+/118638
Comment 16 Commit Notification 2021-08-20 09:14:24 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4bb59cd1f45133994d3d13642367470f528094f4

tdf#91519: prevent jump to top of the comment view

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Mehmet gelisin 2021-09-11 13:04:13 UTC Comment hidden (spam)