tdf#91519: prevent jump to top of the comment view

In Writer,
there are 3 issues about comment section:

- comment section scrolls to top of its view
when clicking inside a comment view.

- clicking inside a comment view, scrolls the
view to old cursor location automatically
(if old cursor out of the visible area)

- comment section scrolls automatically to the
old *selected* text (if it's out of visible area)
when clicking inside the Writer canvas view

this commit is intended to solve these issues

Change-Id: If7d62373f5215adea85512b66b78736e04e02c3c